# chatgpt-telegram-bot

./: .dockerignore  .env  .env.example  .gitignore  .replit  Dockerfile  Pipfile  Profile.d  README.md  README.tr.md  bot_run.bat  chat_gpt3_bot.py  config.json.example  docker-compose.yml  gpt_helper.py  local.settings.json  main.py  openai_extract_session_token.py  openai_helper.py  pyproject.toml  replit.nix  requirements.txt  shell  telegram_bot.py  token_usage.py  translations.json  ttest.py  usage_tracker.py
.github/workflows/: docker-image-dev.yml  docker-image-release.yml  docker-image.yml  publish.yaml
Chart/: Chart.yaml  values.yaml
Chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
app/: main.py  openai_helper.py  telegram_bot.py
bot/: config.py  db.py  db_service.py  functions.py  keep_alive.py  local_helper.py  main.py  openai_helper.py  plugin_manager.py  telegram_bot.py  total_usage_tracker.py  usage_tracker.py  utils.py
bot/core/: prompts.py
bot/plugins/: auto_dalle.py  auto_tts.py  coinmarketcap.py  crypto.py  ddg_image_search.py  ddg_translate.py  ddg_web_search.py  deepl.py  dice.py  gtts_text_to_speech.py  hookspec.py  images.py  iplocation.py  plugin.py  spotify.py  translate.py  weather.py  web_search.py  webshot.py  whois.py  whois_.py  wolfram_alpha.py  worldtimeapi.py  youtube_audio_extractor.py
bot/resources/: chat_modes.yml  models.yml  translations.json
bot/usage_logs/: 550909926.json
database/: __init__.py  db.py
init_scripts/: db.sql
plugins/: weather.py
workflows/: deploy.yml
